Seeders and create closing checklist

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -986,5 +986,11 @@
     <text name="YourPaymentHasBeenCompleted">Your payment has been completed.</text>
     <text name="ExternalPaymentId">External Payment Id</text>
     <text name="CostOfProration">Price difference during the period</text>
+    
+    <!--Checklist-->
+    <text name="ClosingChecklist">Closing Checklist</text>
+    <text name="CreateClosingChecklist">Create closing checklist</text>
+    <text name="EditClosingChecklist">Edit closing checklist</text>
+    <text name="DeleteClosingChecklist">Delete closing checklist</text>
   </texts>
 </localizationDictionary>
