--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <localizationDictionary culture="en">
-  <texts>    <text name="Tests">Tests</text>
+  <texts>
+    <text name="Tests">Tests</text>
     <text name="Test">Test</text>
     <text name="TestsHeaderInfo">Tests header info</text>
     <text name="CreateNewTest">Create new test</text>
@@ -10,9 +11,8 @@
     <text name="Category">Category</text>
     <text name="Description">Description</text>
     <text name="Title">Title</text>
-    <text name="CategoriesHeaderInfo">Categories header info</text>
+    <text name="CategoriesHeaderInfo">Manage categories.</text>
     <text name="CreateNewCategory">Create new category</text>
-    <text name="EditCategory">Edit category</text>
     <text name="DeleteCategory">Delete category</text>
     <text name="{0}IsRequired">{0} is required.</text>
     <text name="View">View</text>
@@ -992,5 +992,11 @@
     <text name="CreateClosingChecklist">Create closing checklist</text>
     <text name="EditClosingChecklist">Edit closing checklist</text>
     <text name="DeleteClosingChecklist">Delete closing checklist</text>
+    <text name="AddNew">Add new</text>
+
+    <!--Category-->
+    <text name="EditCategory">Edit category</text>
+    <text name="CreateCategory">Create category</text>
+
   </texts>
 </localizationDictionary>
