--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1017,6 +1017,12 @@
     <!--Category-->
     <text name="EditCategory">Edit category</text>
     <text name="CreateCategory">Create category</text>
+    
+    <text name="AllAccountsSuccessfullyImportedFromExcel">Accounts import process has been completed successfully. All Accounts in file are imported.</text>
+    <text name="FileCantBeConvertedToAccountsList">Accounts import process has failed. File is invalid.</text>
+    <text name="ImportAccountsProcessStart">Accounts import process has begun.</text>
+    <text name="ImportAccountsUploadFailed">Accounts import process has failed.</text>
+    <text name="InvalidAccountsImports">Invalid Accounts imports</text>
 
   </texts>
 </localizationDictionary>
