--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -28,10 +28,12 @@
     <text name="EditTest">Edit test</text>
     <text name="DeleteTest">Delete test</text>
     <text name="Categories">Categories</text>
+    <text name="Exceptions">Exceptions</text>
     <text name="Category">Category</text>
     <text name="Description">Description</text>
     <text name="Title">Title</text>
     <text name="CategoriesHeaderInfo">Manage categories.</text>
+    <text name="ExceptionsHeaderInfo">Manage Exceptions.</text>
     <text name="CreateNewCategory">Create new category</text>
     <text name="DeleteCategory">Delete category</text>
     <text name="{0}IsRequired">{0} is required.</text>
