Error log path fix , Ui issues fixed, naming convention fix

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1058,6 +1058,8 @@
     <text name="NullValuesAreNotAllowed">Null values are not allowed.</text>
     <text name="ReconcilationError">Reconcilation Error.</text>
     <text name="DueDate">Due date</text>
+    <text name="ErrorLog">Error Log</text>
+    <text name="ErrorLogHeaderInfo">Manage error log</text>
 
 
 
