--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -2,6 +2,10 @@
 <localizationDictionary culture="en">
   <texts>
     <text name="TimeManagements">Time managements</text>
+    <text name="SomeAccountsSuccessfullyImportedFromExcel">Accounts import process has been completed successfully. Some accounts has errors, please visit import log.</text>
+    <text name="ZeroAccountsErrorMessaage">First create some accounts and then upload trial balance!</text>
+    <text name="SomeAccountsTrialBalanceSuccessfullyImportedFromExcel">Accounts Trial Balance import process has been completed successfully. Some records has errors, please visit import log.</text>
+    <text name="EmptyValuesError"> Value(s) are empty!</text>
     <text name="ClosingMonthGreaterException">Closing month is greater than ends on.</text>
     <text name="TimeManagement">Time management</text>
     <text name="OpenDate">Open date</text>
@@ -21,7 +25,7 @@
     <text name="MonthRange">Month range</text>
     <text name="Management">Management</text>
     <text name="ThisMonthIsAlreadyDefined">This month is already defined.</text>
-    
+
     <text name="Tests">Tests</text>
     <text name="CreateNew">Create new</text>
     <text name="Test">Test</text>
@@ -47,7 +51,7 @@
     <text name="MinValue">Min</text>
     <text name="MaxValue">Max</text>
     <text name="AssigneeDoesNotExist">Assignee Does Not Exist,</text>
-    
+
     <text name="HomePage">Home page</text>
     <text name="AboutUs">About us</text>
     <text name="Administration">Administration</text>
@@ -1011,7 +1015,7 @@
     <text name="YourPaymentHasBeenCompleted">Your payment has been completed.</text>
     <text name="ExternalPaymentId">External Payment Id</text>
     <text name="CostOfProration">Price difference during the period</text>
-    
+
     <!--Checklist-->
     <text name="ClosingChecklist">Closing Checklist</text>
     <text name="CreateClosingChecklist">Create closing checklist</text>
@@ -1044,7 +1048,7 @@
     <text name="CreateCategory">Create category</text>
     <text name="EditTask">Edit Task</text>
     <text name="TaskDetails">Task Details</text>
-    
+
     <text name="AllAccountsSuccessfullyImportedFromExcel">Accounts import process has been completed successfully. All Accounts in file are imported.</text>
     <text name="FileCantBeConvertedToAccountsList">Accounts import process has failed. File is invalid.</text>
     <text name="ImportAccountsProcessStart">Accounts import process has begun.</text>
