--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -101,6 +101,7 @@
     <text name="RoleDeleteWarningMessage">Role {0} will be deleted and unassigned from all assigned users.</text>
     <text name="UserDeleteWarningMessage">User {0} will be deleted.</text>
     <text name="Active">Active</text>
+    <text name="ErrorForImport">Error</text>
     <text name="EmailConfirm">Email confirm</text>
     <text name="Yes">Yes</text>
     <text name="No">No</text>
