--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1075,7 +1075,8 @@
     <text name="NotStarted">Not Started</text>
     <text name="InProcess">In Process</text>
     <text name="OnHold">On Hold</text>
-    <text name="Completed">Completed</text>AllStatuses
+    <text name="Completed">Completed</text>
+    <text name="Open">Open</text>
     <text name="AllStatuses">All Statuses</text>
     <text name="DueBy">Due By</text>
     
@@ -1107,5 +1108,8 @@
     <text name="Charts Of Account Format">Charts Of Account Format</text>
     <text name="Trial Balance Format">Trial Balance Format</text>
     <text name="Type">Type</text>
+    <text name="Assigned User">Assigned User</text>
+    <text name="Reconciliation type">Reconciliation type</text>
+    <text name="Reconciliation as">Reconciliation as</text>
   </texts>
 </localizationDictionary>
