--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1043,6 +1043,8 @@
     <text name="Endson">Ends on</text>
     <text name="Endofmonth">End of month</text>
     <text name="Attachments">Attachments</text>
+    <text name="No Attachments">No Attachments</text>
+
 
     <!--Category-->
     <text name="EditCategory">Edit category</text>
@@ -1109,7 +1111,22 @@
     <text name="Trial Balance Format">Trial Balance Format</text>
     <text name="Type">Type</text>
     <text name="Assigned User">Assigned User</text>
+    
+    
+    
     <text name="Reconciliation type">Reconciliation type</text>
     <text name="Reconciliation as">Reconciliation as</text>
+    <text name="Trial Balance">Trial Balance</text>
+    <text name="Variance">Variance</text>
+    <text name="Check as Reconciled">Check as Reconciled</text>
+    <text name="Itemized Details">Itemized Details</text>
+    <text name="Journal Entry No">Journal Entry No</text>
+    <text name="Start Date">Start Date</text>
+    <text name="End Date">End Date</text>
+    <text name="Beginning Amount">Beginning Amount</text>
+    <text name="Accrued Amortization">Accrued Amortization</text>
+    <text name="Net Amount">Net Amount</text>
+    <text name="Manual">Manual</text>
+    <text name="Accumulate Amount">Accumulate Amount</text>
   </texts>
 </localizationDictionary>
