Closing CheckList DropDown UI issue resolved

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1106,7 +1106,7 @@
     <text name="Account Sub type">Account Sub Type</text>
     <text name="Save changes">Save changes</text>
     <text name="Create Account Sub Type">Create Account Sub Type</text>
-    <text name="Upload Sample File">Upload Sample File</text>
+    <text name="Download Sample File">Download Sample File</text>
     <text name="Type">Type</text>
     <text name="Assigned User">Assigned User</text>
     
