Localization of All Components in Common Folder

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -988,9 +988,23 @@
     <text name="WidgetDailySales">Daily Sales</text>
     <text name="WidgetGeneralStats">General Stats</text>
     <text name="WidgetProfitShare">Profit Share</text>
+    <text name="MEMBER">MEMBER</text>
+    <text name="Earnings">Earnings</text>
+    <text name="CASES">CASES</text>
+    <text name="RegionalStats">Regional Stats</text>
+    <text name="Country">Country</text>
+    <text name="Sales">Sales</text>
+    <text name="Change">Change</text>
+    <text name="AvgPrice">Avg Price</text>
+    <text name="RATE">RATE</text>
+    <text name="Revenue">Revenue</text>
+    <text name="Expenses">Expenses</text>
+    <text name="Growth">Growth</text>
+    <text name="Profit Share between customers">Profit Share between customers</text>
     <text name="WidgetMemberActivity">Member Activity</text>
     <text name="WidgetRegionalStats">Regional Stats</text>
     <text name="WidgetSalesSummary">Sales Summary</text>
+    <text name="WidgetTotalSales">Total Sales</text>
     <text name="WidgetTopStats">General Summary</text>
     <text name="WidgetIncomeStatistics">Income Statistics</text>
     <text name="WidgetEditionStatistics">Edition Statistics</text>
