--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -991,15 +991,22 @@
     <text name="MEMBER">MEMBER</text>
     <text name="Earnings">Earnings</text>
     <text name="CASES">CASES</text>
+    <text name="New Users">New Users</text>
+    <text name="Joined New User">Joined New User</text>
     <text name="RegionalStats">Regional Stats</text>
     <text name="Country">Country</text>
     <text name="Sales">Sales</text>
-    <text name="Change">Change</text>
     <text name="AvgPrice">Avg Price</text>
     <text name="RATE">RATE</text>
     <text name="Revenue">Revenue</text>
     <text name="Expenses">Expenses</text>
     <text name="Growth">Growth</text>
+    <text name="New Orders">New Orders</text>
+    <text name="Fresh Order Amount">Fresh Order Amount</text>
+    <text name="TotalProfit">Total Profit</text>
+    <text name="All Customs Value">All Customs Value</text>
+    <text name="New Feedbacks">New Feedbacks</text>
+    <text name="Customer Review">Customer Review</text>
     <text name="Profit Share between customers">Profit Share between customers</text>
     <text name="WidgetMemberActivity">Member Activity</text>
     <text name="WidgetRegionalStats">Regional Stats</text>
