Text Editor added to Reconciliation.

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1076,7 +1076,7 @@
     <text name="Comments">Comments</text>
     <text name="Comment">Comment</text>
     <text name="ClosingMonth">Closing Month</text>
-    <text name="Instruction">Instruction</text>
+    <text name="Instruction">Instructions</text>
     <text name="Frequency">Frequency</text>
     <text name="Criteria">Criteria</text>
     <text name="Quarterly">Quarterly</text>
