--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -8,6 +8,7 @@
     <text name="MonthOpenedMessage">MonthOpenedMessage.</text>
     <text name="OpenMonthMessage">OpenMonthMessage.</text>
     <text name="TaskReport">Task Report</text>
+    <text name="AccountNumberExist">Account number already exists.</text>
     
     <text name="AccountRestoredSuccessfully">Account Restored Successfully!</text>
     <text name="TaskRestoredSuccessfully">Task Restored Successfully!</text>
