--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1175,5 +1175,6 @@
     
     <text name="FirstName">First Name</text>
     <text name="LastName">Last Name</text>
+  <text name="AccountSubtypewithsameNamealreadyexist">Account Sub type with same Name already exist</text>
   </texts>
 </localizationDictionary>
