Calendar UI Fixed

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -94,12 +94,12 @@
     <text name="LogIn">Log in</text>
     <text name="ForgotPassword">Forgot password?</text>
     <text name="DontYouHaveAnAccount">Don't you have an account?</text>
-    <text name="CreateAnAccount">Create account</text>
+    <text name="CreateAnAccount">Create Account</text>
     <text name="Pages">Pages</text>
-    <text name="RoleName">Role name</text>
-    <text name="EditRole">Edit role</text>
-    <text name="CreateNewRole">Create new role</text>
-    <text name="RoleProperties">Role properties</text>
+    <text name="RoleName">Role Name</text>
+    <text name="EditRole">Edit Role</text>
+    <text name="CreateNewRole">Create New Role</text>
+    <text name="RoleProperties">Role Properties</text>
     <text name="Permissions">Permissions</text>
     <text name="Save">Save</text>
     <text name="Cancel">Cancel</text>
@@ -112,11 +112,11 @@
     <text name="YesDelete">Yes, delete!</text>
     <text name="DeletingUser">Deleting user</text>
     <text name="UsersHeaderInfo">Manage users and permissions.</text>
-    <text name="CreateNewUser">Create new user</text>
-    <text name="UserName">User name</text>
+    <text name="CreateNewUser">Create New User</text>
+    <text name="UserName">User Name</text>
     <text name="Name">Name</text>
     <text name="Surname">Surname</text>
-    <text name="EmailAddress">Email address</text>
+    <text name="EmailAddress">Email Address</text>
     <text name="LastLoginTime">Last login time</text>
     <text name="EditUser">Edit user</text>
     <text name="UserInformations">User information</text>
@@ -528,7 +528,7 @@
     <text name="VerifySecurityCode_Information">Please enter the verification code sent to you.</text>
     <text name="RememberThisBrowser">Remember this browser</text>
     <text name="InvalidSecurityCode">Invalid security code!</text>
-    <text name="PhoneNumber">Phone number</text>
+    <text name="PhoneNumber">Phone Number</text>
     <text name="Unlock">Unlock</text>
     <text name="UnlockedTheUser">Unlocked the user {0}</text>
     <text name="UserLockOut">User Lock Out</text>
